--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav{
 
 .logo{
     color: black;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: bolder;
 }
 
@@ -62,7 +62,7 @@ nav{
 
 .nav-container .links a{
     position: relative;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     color: black;
     text-decoration: none;
     font-weight: 500;
@@ -137,12 +137,13 @@ section{
     height: 90vh;
 }
 
-.main-container{
+.main-container {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
+    gap: -40px; /* Adjust spacing between image and text */
 }
 
 .main-container .image{
@@ -167,7 +168,7 @@ section{
 }
 
 .content h1{
-    font-size: clamp(1rem, 2rem + 5vw, 3rem);
+    font-size: clamp(2rem, 3rem + 5vw, 4rem);
 }
 
 .content h1 span{
@@ -177,7 +178,7 @@ section{
 
 .content .typewriter{
     font-weight: 600;
-    font-size: clamp(1rem, 1rem + 5vw, 2rem);
+    font-size: clamp(2rem, 2rem + 5vw, 3rem);
 }
 
 .content .typewriter span{
@@ -221,7 +222,7 @@ section{
 }
 
 .content p{
-    font-size: clamp(0.4rem, 0.2rem + 9vw, 1rem);
+    font-size: clamp(0.5rem, 0.3rem + 9vw, 1.2rem);
     margin: 10px 0;
 }
 
