--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ section {
   box-shadow: 0 0 10px #6d4300;
 }
 
-.content button {
+/* .content button {
   padding: 0.6rem 1.5rem;
   border: none;
   background-color: #6d4300;
@@ -282,7 +282,23 @@ section {
   color: #6d4300;
   border: 2px solid #6d4300;
   box-shadow: 0 0 15px #6d4300;
+} */
+
+.cv-btn button {
+  background-color: #6d4300;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 25px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
+
+.cv-btn button:hover {
+  background-color: #8b5e00;
+}
+
 
 .about-container {
   width: 90%;
