update the new project and fix some issues

--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ section {
     content: "UI/UX Designer";
   }
   67%, 100% {
-    content: "Freelancer";
+    content: "Content Creator";
   }
 }
 
