--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ section {
 }
 
 
-.about-container {
+/* .about-container {
   width: 90%;
   max-width: 1200px;
   margin: auto;
@@ -360,7 +360,7 @@ section {
   .about-content {
     width: 100%;
   }
-}
+} */
 
 .skills-content {
   text-align: center;
